--- a/Week8/lab8/index.html
+++ b/Week8/lab8/index.html
@@ -115,6 +115,7 @@
           answer.innerText = "incorrect";
         }
       });
+      //   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     </script>
   </body>
 </html>
