--- a/Week8/pset6/about.html
+++ b/Week8/pset6/about.html
@@ -79,7 +79,7 @@
     <main>
       <div class="bg-white rounded-lg justify-center">
         <h2 class="font-bold py-2 pl-2 text-center text-xl border-b-2">経歴</h2>
-        <div class="">
+        <div class="leading-9 m-auto w-full">
           <p class="text-left">
             2018/04〜2019/04
             都内スタートアップでプログラミングスクールの立ち上げ営業
